Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96600

Some QGuiApplication command line options have incorrect descriptions

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 5.15.7, 6.2.1, 6.3.0 Alpha
    • 5.15.2
    • GUI: Window management
    • None
    • OS: openSUSE Tumbleweed 20210914,
      Qt Version: 5.15.2
    • Linux/X11
    • 1b0cb842129616d67ddf279e7e900fcdf433e390 (qt/qtbase/dev) 50636196e17a25f4c1db6462781c6c3c0d73f322 (qt/qtbase/6.2) e6c28f2cd6e305245906cf9fd52670107f11ce75 (qt/tqtc-qtbase/5.15)

      The descriptions of the --geometry, --icon, and --title options are incorrect. Currently they are:

      --geometry <geometry>                Alias for --windowgeometry. 
      --icon <icon>                        Alias for --windowicon. 
      --title <title>                      Alias for --windowtitle.

      However, they should instead refer to --qwindowgeometry, --qwindowicon, and --qwindowtitle.

      This requires changing lines 1366-1371 of qtbase.git/tree/src/gui/kernel/qguiapplication.cpp to

      options->append(QCommandLineOption(QStringLiteral("geometry"),
                      QGuiApplication::tr("Alias for --qwindowgeometry."),
                      QStringLiteral("geometry")));
      options->append(QCommandLineOption(QStringLiteral("icon"),
                      QGuiApplication::tr("Alias for --qwindowicon."),
                      QStringLiteral("icon")));
      options->append(QCommandLineOption(QStringLiteral("title"),
                      QGuiApplication::tr("Alias for --qwindowtitle."),
                      QStringLiteral("title")));
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vestbo Tor Arne Vestbø
            jackh Jack Hill
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes