Fix QGuiApplication command line options documentation for X11

Fixes: QTBUG-96600
Change-Id: Ic3670b952d97270cce4f0a8df8bba79e934e4a6d
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 1b0cb842129616d67ddf279e7e900fcdf433e390)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>